# Various-ML-projects

./: .gitignore  README.md  pyproject.toml
Building Generative AI Applications with Gradio/: Gradio Chatbot.ipynb  Gradio Game app.ipynb  Gradio NLP tasks.ipynb
Gradio/: gradioApp.py
LangChain Chat with your data/: LangChain chat with your data.ipynb  pyproject.toml
LangChain for LLM Application Development/: LangChain for LLM Application Development.ipynb
LangChain for LLM Application Development/.ipynb_checkpoints/: LangChain for LLM Application Development-checkpoint.ipynb
image_classifier_logistic_regresssion/: cat_classifier.ipynb
