[tool.poetry]
name = "Venv-variousMLProjects"
version = "0.1.0"
description = "packages needed for the udemy course"
authors = ["Madbubbl3 <hellinsylvain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.2"
torch = "^2.0.1"
jupyter = "^1.0.0"
notebook = "^7.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
h5py = "^3.9.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
langchain = {extras = ["docarray"], version = "^0.0.334"}
tiktoken = "^0.5.1"
icecream = "^2.1.3"
jupyterlab = "^4.0.8"
ipykernel = "^6.26.0"
kite = "^1.5.7"
jupyter-kite = "^2.0.2"
docarray = "~0.32.0"
pydantic = "~1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
