[tool.poetry]
name = "LangChain_chat_with_your_data"
version = "0.1.0"
description = "packages needed for the Deeplearning.ai course"
authors = ["Madbubbl3 <hellinsylvain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.2"
torch = "^2.0.1"
jupyter = "^1.0.0"
notebook = "^7.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
h5py = "^3.9.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.1"
icecream = "^2.1.3"
jupyterlab = "^4.0.8"
ipykernel = "^6.26.0"
docarray = "~0.32.0"
pydantic = "~1.10"
langchain = "0.0.213"
pypdf = "^3.17.4"
yt-dlp = "^2023.12.30"
pydub = "^0.25.1"
